Changement du nom du packge pour qu'il respecte les conventions + j'ai retire le static inutile dans la classe main , qui a ete remplace par des variables private avec des getters

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: ModoUtils
 version: 1
 author: coco33920
-main: fr.colin.modoM.ModoMessage
+main: fr.colin.modom.ModoMessage
 commands:
   annonce:
   help:
